Remove extra section on Firefox Performance page for Bug 661285
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@90905 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/performance.css
+++ b/style/covehead/performance.css
@@ -24,7 +24,7 @@
 	overflow: auto;
 	zoom: 1;
 	margin: 0;
-	padding: 15px 100px;
+	padding: 15px 100px 15px 225px;
 	background: url(/img/firefox/security/menu-background.png) 0 0 no-repeat;
 }
 
@@ -223,7 +223,7 @@
     margin-top: 10px;
 }
 
-#firefox-performance .section#app .section-content {
+#firefox-performance .section#web .section-content {
     margin-right: 20px;
     width: 240px;
 }
